--- a/index.html
+++ b/index.html
@@ -1,52 +1,37 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Dog-Eats-Man</title>
+	<link rel="stylesheet" href="css/normalize.css"/>
+	<link rel="stylesheet" href="css/app.css"/>
+</head>
+<body class="bg">
+	<div id="container"> 
+		<div class="story">
+			<h3>Show me a story about...</h3>
+			<span> a
+				<span class="dropdown">
+					<a class="biter" href="#" data-action="show-dropdown" data-type="biter"></a>
+					<ul class="dropdown-menu"></ul>
+				</span> 
+				bites a 
+				<span class="dropdown">
+					<a class="bitee" href="#" data-action="show-dropdown" data-type="bitee"></a>		
+					<ul class="dropdown-menu"></ul>
+				</span>
+			</span>
+		</div>
 
-  <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Dog-bites-man : A interesting project" />
-
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Dog-bites-man</title>
-  </head>
-
-  <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/zjhiphop/dog-bites-man">View on GitHub</a>
-
-          <h1 id="project_title">Dog-bites-man</h1>
-          <h2 id="project_tagline">A interesting project</h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/zjhiphop/dog-bites-man/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/zjhiphop/dog-bites-man/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h1>
-<a name="dog-bites-man" class="anchor" href="#dog-bites-man"><span class="octicon octicon-link"></span></a>dog-bites-man</h1>
-
-<p>A interesting project</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Dog-bites-man maintained by <a href="https://github.com/zjhiphop">zjhiphop</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
+		<div class="result">
+			<h3 class="found header"> found one!</h3>
+			<span class="not-found">
+				as far as i know a <span class="biter" data-type="biter"></span> has never bitten a <span class="bitee" data-type="bitee"></span>
+			</span>
+			<a href="#" class="found body"></a>
+		</div>
+	</div>
+	<script src="lib/jquery-2.0.3.js"></script>
+	<script src="js/app.js"></script>
+</body>
 </html>
